# ConsoleApplication14

./: CMakeLists.txt  ConsoleApplication14.sln  Task_1.txt  Task_2.txt
ConsoleApplication14/: ConsoleApplication14.cpp  ConsoleApplication14.vcxproj  ConsoleApplication14.vcxproj.filters  Task2.cpp  Task2.h  Text_Preprocessor.cpp  Text_Preprocessor.h
ConsoleApplication14/Tasks/: Task_1.txt
